# lista-4-projekt-grupowy-1

./: .gitignore  .pre-commit-config.yaml  flake.nix  pyproject.toml
notebooks/: decision_tree.ipynb  eda.ipynb  logistic_regression.ipynb  svm.ipynb
scripts/: preprocess_neo.py  utils.py
