[project]
name = "lista-4-projekt-grupowy-1"
version = "0.1.0"
description = "Projekt grupowy na MLa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
